[package]
name = "guit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.26.0", features = ["crossterm"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
git2 = "0.18.2"
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
strip = true
